<resources>
    <string name="app_name">Holly Belly</string>

    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="details">Details</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="deserts">Deserts</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="cancel">CANCEL</string>

    <string name="id">ID</string>
    <string name="e_mail">E - Mail</string>
    <string name="nickname">Nickname</string>
    <string name="phone_no">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="payment_method">Payment Method</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="address_title">Address</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="total_price">Total Price</string>
    <string name="order_now">Order Now</string>
    <string name="choose_a_payment_method">Choose a payment method</string>


    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="money_type">$</string>

    <string name="food_count_text">Piece:</string>
    <string name="food_price_text">Price:</string>

    <string name="password_match_error">Passwords do not match</string>
    <string name="sign_up_snack_text">Registration successfully created</string>
    <string name="registered_mail">E-mail address already registered!</string>
    <string name="invalid_mail">Invalid e-mail address</string>
    <string name="incomplete_information_entered">Incomplete information entered!</string>
    <string name="wrong_email_password">Wrong E-mail or Password, Try Again !</string>
    <string name="dont_null">Field cannot be empty!</string>
    <string name="not_zero">Item cannot be zero!</string>
    <string name="oneItemAdded">1 Item added to the cart!</string>
    <string name="cart_is_empty">Your cart is empty!</string>
    <string name="order_now_error">Please choose a payment method!</string>
    <string name="address_error">Please enter address information!</string>
    <string name="your_order_has_been_received">Your order\nhas been received</string>

    <string name="okay_text">Yes</string>
    <string name="no_text">No</string>

    <string name="want_to_delete">Do you want to delete?</string>
    <string name="item_deleted">Item Deleted</string>
    <string name="item_cant_deleted">Item could not be deleted</string>
    <string name="go_to_payment">Go To Payment</string>

</resources>