<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/RED"
    android:padding="16dp"
    tools:context=".ui.main.payment.PaymentFragment">

    <TextView
        android:id="@+id/paymentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/masterCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/payment_card_selector"
        android:button="@null"
        android:elevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/paymentMethodText"
        app:layout_constraintEnd_toStartOf="@+id/paypalCard"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentTitle">

    </RadioButton>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:src="@drawable/ic_mastercard"
        app:layout_constraintBottom_toBottomOf="@+id/masterCard"
        app:layout_constraintEnd_toEndOf="@+id/masterCard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/masterCard"
        app:layout_constraintTop_toTopOf="@+id/masterCard"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/paypalCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/payment_card_selector"
        android:button="@null"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/masterCard"
        app:layout_constraintEnd_toStartOf="@+id/appleCard"
        app:layout_constraintStart_toEndOf="@+id/masterCard"
        app:layout_constraintTop_toTopOf="@+id/masterCard">

    </RadioButton>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:src="@drawable/ic_paypal"
        app:layout_constraintBottom_toBottomOf="@+id/paypalCard"
        app:layout_constraintEnd_toEndOf="@+id/paypalCard"
        app:layout_constraintStart_toStartOf="@+id/paypalCard"
        app:layout_constraintTop_toTopOf="@+id/paypalCard" />

    <RadioButton
        android:id="@+id/googleCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/payment_card_selector"
        android:button="@null"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/masterCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appleCard"
        app:layout_constraintTop_toTopOf="@+id/masterCard">

    </RadioButton>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:src="@drawable/ic_googlepay"
        app:layout_constraintBottom_toBottomOf="@+id/googleCard"
        app:layout_constraintEnd_toEndOf="@+id/googleCard"
        app:layout_constraintStart_toStartOf="@+id/googleCard"
        app:layout_constraintTop_toTopOf="@+id/googleCard" />

    <RadioButton
        android:id="@+id/appleCard"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/payment_card_selector"
        android:button="@null"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/masterCard"
        app:layout_constraintEnd_toStartOf="@+id/googleCard"
        app:layout_constraintStart_toEndOf="@+id/paypalCard"
        app:layout_constraintTop_toTopOf="@+id/masterCard">

    </RadioButton>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="10dp"
        android:padding="16dp"
        android:src="@drawable/ic_applepay"
        app:layout_constraintBottom_toBottomOf="@+id/appleCard"
        app:layout_constraintEnd_toEndOf="@+id/appleCard"
        app:layout_constraintStart_toStartOf="@+id/appleCard"
        app:layout_constraintTop_toTopOf="@+id/appleCard" />

    <TextView
        android:id="@+id/paymentMethodText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_payment_method"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masterCard" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0.5"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/addressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentMethodText">

        <ImageView
            android:id="@+id/paymentCard"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/bg_credit_card" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/cardNumberText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardCard"
        app:layout_constraintEnd_toStartOf="@+id/paymentTypeImage"
        app:layout_constraintStart_toStartOf="@+id/cardCard"
        app:layout_constraintTop_toTopOf="@+id/cardCard"
        tools:text="* * * *   * * * *   * * * *   9 2 7 8" />

    <ImageView
        android:id="@+id/paymentTypeImage"
        android:layout_width="55dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardCard"
        app:layout_constraintEnd_toEndOf="@+id/cardCard"
        app:layout_constraintTop_toTopOf="@+id/cardCard"
        tools:src="@drawable/ic_mastercard" />

    <TextView
        android:id="@+id/addressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/address_title"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/addressText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:lines="4"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/totalPriceTitle"
        app:layout_constraintEnd_toStartOf="@+id/editImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardCard" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressTextInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="gone"
        android:fontFamily="@font/roboto_medium"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/addressText"
        app:layout_constraintEnd_toEndOf="@+id/addressText"
        app:layout_constraintStart_toStartOf="@+id/addressText"
        app:layout_constraintTop_toTopOf="@+id/addressText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/editImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/addressText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toTopOf="@+id/orderNowButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressText" />

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="@+id/totalPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalPriceTitle"
        tools:text="$348,67" />

    <Button
        android:id="@+id/orderNowButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:text="@string/order_now"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toTopOf="@+id/cancelPaymentButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelPaymentButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>