<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="SIFragment"
            type="com.ethadien.yemeksiparisapp.ui.login.signin.SignInFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/whiteRED"
            android:layout_margin="40dp"
            app:cardElevation="30dp"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.login.signin.SignInFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInput1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/e_mail"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeErrorColor="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInput2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appName"
                    app:startIconDrawable="@drawable/ic_mail"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInMail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/roboto_medium" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="50dp"
                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    android:textColorHint="@color/white"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeErrorColor="@color/white"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeWidth="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/signInButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TextInput1"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/appName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/lottie_order_food"/>

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/pacifico"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toTopOf="@+id/TextInput1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/black_button_background"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:onClick="@{() -> SIFragment.signInButton(signInMail.getText().toString(), signInPass.getText().toString())}"
                    android:fontFamily="@font/roboto_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInput2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>